# AOC24

./: CMakeLists.txt
day1/: part1.cpp  part2.cpp
day10/: part1.cpp  part2.cpp
day11/: part1.cpp  part2.cpp
day12/: part1.cpp  part2.cpp
day13/: part1.cpp  part2.cpp
day14/: part1.cpp  part2.cpp
day15/: part1.cpp  part2.cpp
day16/: part1.cpp
day2/: inputtest.txt  part1.cpp  part2.cpp
day3/: part1.cpp  part2.cpp
day4/: part1.cpp  part2.cpp
day5/: part1.cpp  part2.cpp
day6/: part1.cpp  part2.cpp
day7/: part1.cpp  part2.cpp
day8/: part1.cpp  part2.cpp
day9/: part1.cpp  part2.cpp
util/: point.h  readfile.h  regextools.h  split.h  table.h
